[gd_scene load_steps=3 format=3 uid="uid://dobyp1q0dd10x"]

[ext_resource type="Script" uid="uid://bq8n7b80fedla" path="res://menu.gd" id="1_lti8b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lti8b"]
bg_color = Color(0, 0.462745, 0.411765, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 643.0
rotation = 0.00203563
theme_override_styles/panel = SubResource("StyleBoxFlat_lti8b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -68.0
offset_right = 62.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(64, 70)

[node name="Tutorial_1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Start Tutorial 1"

[node name="Tutorial_2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Start Tutorial 2"

[node name="LoginPage" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Login"

[node name="OptionsPage" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Options"

[connection signal="button_down" from="VBoxContainer/Tutorial_1" to="." method="_on_tutorial_1_button_down"]
[connection signal="button_down" from="VBoxContainer/Tutorial_2" to="." method="_on_tutorial_2_button_down"]
[connection signal="button_down" from="VBoxContainer/LoginPage" to="." method="_on_login_page_button_down"]
[connection signal="button_down" from="VBoxContainer/OptionsPage" to="." method="_on_options_page_button_down"]
